zlinmanavic/css/override.css
/* Style overrides for the generated website. */

/* ---------------------------------------------------------------------------------- */
/* FONT */
@font-face {
  font-family: 'Flama';
  src: url('../font/Flama-BoldItalic.eot');
  src: url('../font/Flama-BoldItalic.eot?#iefix') format('embedded-opentype'), url('../font/Flama-BoldItalic.woff2') format('woff2'),
    url('../font/Flama-BoldItalic.woff') format('woff'), url('../font/Flama-BoldItalic.ttf') format('truetype');
  font-weight: bold;
  font-style: italic;
}

@font-face {
  font-family: 'Flama';
  src: url('../font/Flama-Book.eot');
  src: url('../font/Flama-Book.eot?#iefix') format('embedded-opentype'), url('../font/Flama-Book.woff2') format('woff2'), url('../font/Flama-Book.woff') format('woff'),
    url('../font/Flama-Book.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Flama';
  src: url('../font/Flama-Bold.eot');
  src: url('../font/Flama-Bold.eot?#iefix') format('embedded-opentype'), url('../font/Flama-Bold.woff2') format('woff2'), url('../font/Flama-Bold.woff') format('woff'),
    url('../font/Flama-Bold.ttf') format('truetype');
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: 'Flama';
  src: url('../font/Flama-BookItalic.eot');
  src: url('../font/Flama-BookItalic.eot?#iefix') format('embedded-opentype'), url('../font/Flama-BookItalic.woff2') format('woff2'),
    url('../font/Flama-BookItalic.woff') format('woff'), url('../font/Flama-BookItalic.ttf') format('truetype');
  font-weight: normal;
  font-style: italic;
}

body,
.blog-detail-head h1,
.blog h1,
.text h1,
.blog-detail-head h2,
.blog h2,
.text h2,
.blog-detail-head h3,
.blog h3,
.text h3,
.blog-detail-head h4,
.blog h4,
.text h4,
#menu,
.header-01 #menu {
  font-family: 'Flama', 'fira-sans', 'Trebuchet MS', sans-serif !important;
}

b,
.strong {
  font-weight: bold !important;
}

/* ---------------------------------------------------------------------------------- */
/* HERO */
/* homepage - hero - disable */
.section-wrapper .fullscreen {
  height: auto !important;
  min-height: auto !important;
  max-height: auto !important;
}
.header-01.design-01 .section-bg {
  display: none !important;
}

/* homepage - remove grey overlay */
.overlay-black {
  background-color: transparent;
}
.overlay-black-light {
  background-color: transparent;
}

/* homepage - set proportional height of the first content element to ensure that the background photo is displayed correctly */
.wtf-homepage .section.default-01.design-01.section-media.wnd-background-image {
  width: 100% !important;
  padding-top: 37% !important;
  position: relative !important;
}
.wtf-homepage .section.default-01.design-01.section-media.wnd-background-image .section-inner {
  display: none !important;
}

/* For smaller screens, serve a different hero image and aspect ratio */
@media (max-width: 1000px) {
  .section-wrapper .section-bg .section-bg-layer.wnd-background-image.bgpos-center-center.bgatt-scroll {
    background-image: url(//michalmalota.github.io/webnode/zlinmanavic/img/hero.small-screen.jpg) !important;
  }
  .wtf-homepage .section.default-01.design-01.section-media.wnd-background-image {
    padding-top: 56% !important;
  }
}

/* ---------------------------------------------------------------------------------- */
/* HEADINGS */
/* headings - blue background */
.color-blue .section-media .claim-bg-color > span > span,
.color-blue .section-media .claim-color > span > span {
  box-shadow: 10px 0 0 #004a8f, -10px 0 0 #004a8f, 10px 0 0 #004a8f, -10px 0 0 #004a8f, 10px 0 0 #004a8f, -10px 0 0 #004a8f;
  background-color: #004a8f;
}

/* ---------------------------------------------------------------------------------- */
/* LOGO */
/* fix logo being cropped on small screens (phone vertical) */
.header-01 .logo {
  max-width: none !important;
}

/* ---------------------------------------------------------------------------------- */
/* NAVIGATION */
/* homepage - navigation - orange bacground */
.section-media.header-01.design-01 .nav-line {
  background-color: #ffc535;
  border-bottom: 1px solid #fff;
}
.header-01.design-01 .nav-line {
  top: 0 !important;
  bottom: auto !important;
}
.header-01.design-01 > .section-inner {
  padding: 40px 0;
}

/* other pages - navigation - orange bacground */
.section-black.header-01.design-02 .nav-line {
  background-color: #ffc535;
}

/* homepage - navigation - background colours and hide the top line (in active items) */
/* @media (min-width: 768px) {
   body:not(.touched) .section-media.header-01 ul.level-1>li>a:hover {
      background-color: rgba(255,255,255,0.3);
      border: 0;
   }
} */

/* other pages - navigation - background colour and hide the top line (in active items) */
@media (min-width: 768px) {
  .section-black.header-01 ul.level-1 > li:not(.wnd-homepage).wnd-active-path > a,
  .section-black.header-01 ul.level-1 > li:not(.wnd-homepage).wnd-active > a {
    background-color: rgba(255, 255, 255, 0.3);
    border: 0;
  }
}

/* other pages - navigation - background colour and hide the top line (in hovered items) */
@media (min-width: 768px) {
  body:not(.touched) .section-black.header-01 ul.level-1 > li > a:hover {
    background-color: rgba(255, 255, 255, 0.3);
    border: 0;
  }
}

/* ---------------------------------------------------------------------------------- */
/* ICONS */
/* icons - blue colour */
.color-blue .section-white .mt-03-column embed,
.color-blue .section-white .mt-contact-02 embed {
  color: #004a8f;
}

